--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
     "mongoose": "^5.8.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chanwoong528/lolteamrankchat.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chanwoong528/lolteamrankchat/issues"
+  },
+  "homepage": "https://github.com/chanwoong528/lolteamrankchat#readme"
 }
