--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3",
+    "mongoose-extend-schema": "^1.0.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "util.inherits": "^1.0.3"
   },
   "devDependencies": {},
   "repository": {
