--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert-node": "^3.0.11",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -22,6 +23,7 @@
     "mongoose-extend-schema": "^1.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "popups": "^1.1.3",
     "util.inherits": "^1.0.3"
   },
   "devDependencies": {},
