--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "socket.io": "2.3.0",
     "util.inherits": "^1.0.3",
     "ws": "^7.3.1",
-    "popups": "^1.1.3",
-    "util.inherits": "^1.0.3"
+    "popups": "^1.1.3"
   },
   "devDependencies": {},
   "repository": {
