--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "board",
   "version": "1.0.0",
+  "engines" : { "node" : ">=0.12" },
   "description": "",
   "main": "index.js",
   "scripts": {
