--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "board",
   "version": "1.0.0",
-  "engines" : { "node" : ">=0.12" },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=0.12",
+    "npm": ">=6.0.0"
+  },
   "dependencies": {
     "alert-node": "^3.0.11",
     "bcryptjs": "^2.4.3",
@@ -27,8 +30,7 @@
     "socket.io": "2.3.0",
     "util.inherits": "^1.0.3",
     "ws": "^7.3.1",
-    "popups": "^1.1.3",
-    "util.inherits": "^1.0.3"
+    "popups": "^1.1.3"
   },
   "devDependencies": {},
   "repository": {
