--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "ejs": "^3.0.1",
     "express": "4.17.1",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3",
     "mongoose-extend-schema": "^1.0.0",
+    "nodemailer": "^6.4.10",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "popups": "^1.1.3",
     "socket.io": "2.3.0",
     "util.inherits": "^1.0.3",
-    "ws": "^7.3.1",
-    "popups": "^1.1.3"
+    "ws": "^7.3.1"
   },
   "devDependencies": {},
   "repository": {
