--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3",
     "mongoose-extend-schema": "^1.0.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.1",
