--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.8.3",
     "mongoose-extend-schema": "^1.0.0",
     "multer": "^1.4.2",
+    "mustache": "^4.0.1",
     "nodemailer": "^6.4.10",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.1",
