--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "alert-node": "^3.0.11",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "box-node-sdk": "^1.33.0",
     "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
